Fix: question card solved 여부 표시

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,6 +55,8 @@
   --soma-red-20 : #FFECF1;
   --soma-red-60 : #FF006B;
 
+  --soma-green : #07FEC9;
+
   --memo-bgcolor-green: #E6FFF0;
   --memo-bgcolor-yellow: #FFF9E5;
   --memo-bgcolor-navy: #E4EDFD;
