--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    @apply scroll-smooth;
+  }
+}
+
 :root {
   --novel-black: rgb(0 0 0);
   --novel-white: rgb(255 255 255);
