--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,6 +70,13 @@
   --memo-bgcolor-pink: #FFEDF6;
   --memo-bgcolor-skyblue: #E4F7FD;
   --memo-bgcolor-orange: #FFEBE0;
+
+  --rank-bronze:#9F6027;
+  --rank-silver:#A8ADAE;
+  --rank-gold:#E8B647;
+  --rank-platinum:#68D6B7;
+  --rank-diamond:#6EA3EE;
+  --rank-infinity:#D75B9F;
 }
 
 body {
