Fix: 마이페이지 pie chart 추가, progressbar ui 수정

--- a/src/styles/progressbar.css
+++ b/src/styles/progressbar.css
@@ -1,5 +1,8 @@
 .label{
   font-size: 12px;
-  color: white;
+  color: grey;
   font-weight: 700;
+  display: block !important;
+  margin-top: 4px;
+  text-align: center;
 }
