Fix: codeblock 색깔 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,6 +49,8 @@
   --soma-grey-70:#28323C;
   --soma-grey-80:#161D24;
 
+  --soma-codeblock:#2b2b2b;
+
   --soma-blue-5 :#F0F7FF;
   --soma-blue-10 :#ECF4FF;
   --soma-blue-20 :#DDEBFF;
